--- a/src/main/webapp/WEB-INF/pages/login.html
+++ b/src/main/webapp/WEB-INF/pages/login.html
@@ -12,16 +12,17 @@
 
 <body class="text-center">
 <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
-    <header class="masthead mb-auto" ng-init="getCurrentUser()">
-        <div class="inner" ng-init="getUsername()">
+    <header class="masthead mb-auto">
+        <div class="inner">
+            <h3 class="masthead-brand">Clicker</h3>
             <nav class="nav nav-masthead justify-content-center">
-                <a class="nav-link active" href="http://localhost:8080/home">Home</a>
+                <a class="nav-link active" href="https://clicker1.herokuapp.com/home">Home</a>
                 <a class="nav-link" ng-if="username=='anonymousUser'"
-                   href="http://localhost:8080/login">Login</a>
+                   href="https://clicker1.herokuapp.com/login">Login</a>
                 <a class="nav-link" ng-if="username=='anonymousUser'"
-                   href="http://localhost:8080/registration">Registration</a>
+                   href="https://clicker1.herokuapp.com/registration">Registration</a>
                 <a class="nav-link" ng-if="username!='anonymousUser'"
-                   href="http://localhost:8080/highscore">Highscores</a>
+                   href="https://clicker1.herokuapp.com/highscore">Highscores</a>
             </nav>
         </div>
     </header>
