--- a/src/main/webapp/WEB-INF/pages/highscore.html
+++ b/src/main/webapp/WEB-INF/pages/highscore.html
@@ -17,12 +17,11 @@
             <h3 class="masthead-brand">Clicker</h3>
             <nav class="nav nav-masthead justify-content-center">
                 <a class="nav-link active" href="https://clicker1.herokuapp.com/home">Home</a>
+                <a class="nav-link" href="https://clicker1.herokuapp.com/highscore">Highscores</a>
                 <a class="nav-link" ng-if="username=='anonymousUser'"
                    href="https://clicker1.herokuapp.com/login">Login</a>
                 <a class="nav-link" ng-if="username=='anonymousUser'"
                    href="https://clicker1.herokuapp.com/registration">Registration</a>
-                <a class="nav-link" ng-if="username!='anonymousUser'"
-                   href="https://clicker1.herokuapp.com/highscore">Highscores</a>
             </nav>
         </div>
     </header>
