--- a/src/main/webapp/WEB-INF/pages/registration.html
+++ b/src/main/webapp/WEB-INF/pages/registration.html
@@ -12,7 +12,7 @@
 
 <body class="text-center">
 <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
-    <header class="masthead mb-auto">
+    <header class="masthead mb-auto" ng-init="getUsername()">
         <div class="inner">
             <h3 class="masthead-brand">Clicker</h3>
             <nav class="nav nav-masthead justify-content-center">
